--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,33 @@
+---
+import Footer from "../components/core/Footer.astro";
+import Head from "../components/core/Head.astro";
+import Header from "../components/core/Header.astro";
+import globalConfig from "../lib/config";
+
+interface Props {
+	internal?: boolean;
+	title?: string;
+}
+
+let internal = Astro.props.internal ?? false;
+if(Astro.props.internal === undefined || Astro.props.internal === null){
+	if("internal" in Astro.props){
+		internal = true; // allow syntax of <Layout internal />
+	}
+}
+const title = Astro.props.title || globalConfig.brand;
+---
+
+<!-- v1.0.0 freeze, you can edit this in themes -->
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<Head internal={internal} title={title} />
 	</head>
 	<body>
+		<Header internal={internal} />
 		<slot />
+		<Footer internal={internal} />
 	</body>
 </html>
 
